[feature] add dto and make swagger
